Fix uneven icon spacing on product page and 'gift wrapping' text showing on test site

--- a/great-western-wine-theme/assets/scss/components/stencil/productView/_productView.scss
+++ b/great-western-wine-theme/assets/scss/components/stencil/productView/_productView.scss
@@ -421,16 +421,10 @@
     width: 32%;
     text-align: center;
     display: inline-block;
-    margin-top: 35px;
-    &:first-child, &:nth-child(2), &:nth-child(3){
-        margin-top: 0;
-    }
+    margin-top: 5px;
 
     @include breakpoint("small") {
         width: 24%;
-        &:first-child, &:nth-child(2), &:nth-child(3), &:nth-child(4) {
-            margin-top: 0;
-        }
     }
 
     .icon {
@@ -581,7 +575,7 @@
         .productView-kind-desc {
             width: 50%;
             flex-grow: 1;
-            margin-top: 35px;
+            margin: 15px 0;
 
             @include breakpoint("medium") {
                 padding: 0 15px;
